Cykpic circumvention of arrays